compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_custom_type_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type Boxed_value { Box(Int) }"
---
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:1
  │
1 │ type Boxed_value { Box(Int) }
  │ ^^^^^^^^^^^^^^^^ This is not a valid upname

Hint: Upnames start with an uppercase letter and contain only lowercase
letters, numbers, and uppercase letters.
Try: BoxedValue
